--- a/albums.html
+++ b/albums.html
@@ -3,5 +3,5 @@ layout: page
 title: All albums
 ---
 {% for album in site.albums%}
-{{album.title}}<br/>
+<a href="{{album.url}}">{{album.title}}</a><br/>
 {% endfor %}
