--- a/agenda.html
+++ b/agenda.html
@@ -6,9 +6,12 @@ title: Agenda
   <article id="portfolio" class="container">
 		<div >
 			<div class="row">
+        <i>Laatste aanpassing: {{site.time | date: "%d %B %Y"}}</i> | <a href="ical.ics">iCal</a>
         <table>
-        {% for r in site.data.repetities | sort: 'date_from' %}
-	<tr>
+          <tr><th></th><th>Datum</th><th>Start</th><th>Eind</th><th>Locatie</th></tr>
+          {% assign collection =  site.data.repetities | sort: 'date_from' %}
+        {% for r in collection %}
+	        <tr>
             <td>{{ r.title }}</td><td>{{ r.date_from | date: "%d %B %Y" }}</td><td>{{ r.date_from | date: "%H:%M" }}</td><td>{{ r.date_to | date: "%H:%M" }}</td><td>{{ r.location }}</td>
           </tr>
         {% endfor %}
