update to spectral theme

--- a/albums.html
+++ b/albums.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: CDs
+menu: true
+menu-order: 10
 ---
 <div class="wrapper style1 first">
   <article id="portfolio" class="container">
