--- a/informatie-plicht.html
+++ b/informatie-plicht.html
@@ -1,5 +1,8 @@
 ---
 layout: page
+title: Informatieplicht
+menu: true
+menu-order: 30
 ---
 <div class="wrapper style1">
   <article class="container">
