--- a/agenda.html
+++ b/agenda.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Agenda
+menu: true
+menu-order: 20
 ---
 <div class="wrapper style1 first">
   <article id="portfolio" class="container">
