updated informatie plicht.

--- a/informatie-plicht.html
+++ b/informatie-plicht.html
@@ -3,63 +3,68 @@ layout: page
 title: Informatieplicht
 menu: true
 menu-order: 30
+permalink: /informatieplicht/
 ---
-<div class="wrapper style1">
-  <article class="container">
-    <div text-align="left">
-      <h1>Gegevens organisatie</h1>
-      <div style="text-align: left">
-        <p>
-          Naam: Waregems Gitaarensemble Alegria<br/>
-          Juridisch statuut: vzw<br/>
-          Maatschappelijke zetel: Esdoornstraat 15,8790 Waregem<br/>
-          Emailadres: <a href="mailto:info@gitaarensemble-alegria.be">info@gitaarensemble-alegria.be</a><br/>
-          Omschrijving doelstelling: Gitaarensemble Alegria heeft tot doel het gitaarspelen in groepsverband mogelijk te maken, en te bevorderen.
-        </p>
-      </div>
-      <h1>Gegevens vrijwilliger</h1>
-      <div style="text-align: left">
-        <p>
-          Naam vrijwilliger:<br/>
-          Adres:<br/>
-          Telefoonnummer<br/>
-          Persoon en telefoonnummer te contacteren bij ongeval:<br/>
-          Omschrijving van het vrijwilligerswerk met eventuele vermelding van plaats en tijdstippen waarop het vrijwilligerswerk wordt uitgevoerd:
-        </p>
-      </div>
-      <h1>Verzekeringen</h1>
-      <div style="text-align: left">
-        <p>
-          De vereniging heeft een verplichte verzekering afgesloten die de burgerrechtelijke aansprakelijkheid dekt van de organisatie, met uitzondering van de contractuele aansprakelijkheid.
-          Verzekeringsmaatschappij: Verzekeringen Mercator nv
-          Polisnummer: 7.192.191
-        </p>
-        <p>
-          De organisatie heeft volgende facultatieve verzekeringen afgesloten:
-          ongevallenverzekering
-          Verzekeringsmaatschappij: Verzekeringen Mercator nv
-          Polisnummer:7.192.203
-        </p>
-        <p>
-          Omschrijving gedekt risico: objectieve burgerlijke aansprakelijkheid
-          Verzekeringsmaatschappij: Verzekeringen Mercator nv
-          Polisnummer: 7.192.552
-        </p>
-      </div>
+<section class="wrapper style1">
+  <div class="inner">
 
-
-      <h1>Onkostenvergoeding</h1>
-      <div style="text-align: left">
-        aankruisen wat van toepassing is<br/>
-        De organisatie betaalt geen onkostenvergoeding aan de vrijwilliger<br/>
-        De organisatie betaalt een forfaitaire onkostenvergoeding aan de vrijwilliger ten bedrage van ...<br/>
-        De organisatie betaalt een onkostenvergoeding op basis van effectief gemaakte onkosten waarvan het bewijs door de vrijwilliger aan de organisatie wordt overhandigd. Onkosten die terugbetaald worden zijn: ....<br/>
-        Andere wijze van terugbetaling onkosten: ...<br/>
-      </div>
-      <h1>Aansprakelijkheid</h1>
-      <div style="text-align: left">
-        De organisatie is burgerlijk aansprakelijk voor de schade die de vrijwilliger aan derden en aan de organisatie berokkent bij het verrichten van vrijwilligerswerk, behalve in geval van bedrog, zware fout of eerder gewoonlijk dan toevallig voorkomende lichte fout van de vrijwilliger.
-      </div>
+    <h1>Gegevens organisatie</h1>
+    <div>
+      <p>
+        Naam: Waregems Gitaarensemble Alegria<br />
+        Juridisch statuut: vzw<br />
+        Maatschappelijke zetel: Esdoornstraat 15,8790 Waregem<br />
+        Emailadres: <a href="mailto:info@gitaarensemble-alegria.be">info@gitaarensemble-alegria.be</a><br />
+        Omschrijving doelstelling: Gitaarensemble Alegria heeft tot doel het gitaarspelen in groepsverband mogelijk te maken, en te bevorderen.
+      </p>
     </div>
-  </article>
-</div>
+    <h1>Gegevens vrijwilliger</h1>
+    <div>
+      <p>
+        Naam vrijwilliger:<br />
+        Adres:<br />
+        Telefoonnummer:<br />
+        Persoon en telefoonnummer te contacteren bij ongeval:<br />
+        Omschrijving van het vrijwilligerswerk met eventuele vermelding van plaats en tijdstippen waarop het vrijwilligerswerk wordt uitgevoerd:
+      </p>
+    </div>
+    <h1>Verzekeringen</h1>
+    <div>
+      <p>
+        De vereniging heeft een verplichte verzekering afgesloten die de burgerrechtelijke aansprakelijkheid dekt van de organisatie, met uitzondering van de contractuele aansprakelijkheid.
+        Verzekeringsmaatschappij: Verzekeringen Mercator nv
+        Polisnummer: 7.192.191
+      </p>
+      <p>
+        De organisatie heeft volgende facultatieve verzekeringen afgesloten:
+        ongevallenverzekering
+        Verzekeringsmaatschappij: Verzekeringen Mercator nv
+        Polisnummer:7.192.203
+      </p>
+      <p>
+        Omschrijving gedekt risico: objectieve burgerlijke aansprakelijkheid
+        Verzekeringsmaatschappij: Verzekeringen Mercator nv
+        Polisnummer: 7.192.552
+      </p>
+    </div>
+
+
+    <h1>Onkostenvergoeding</h1>
+    <div>
+      <p>
+        aankruisen wat van toepassing is<br />
+        De organisatie betaalt geen onkostenvergoeding aan de vrijwilliger<br />
+        De organisatie betaalt een forfaitaire onkostenvergoeding aan de vrijwilliger ten bedrage van ...<br />
+        De organisatie betaalt een onkostenvergoeding op basis van effectief gemaakte onkosten waarvan het bewijs door de vrijwilliger aan de organisatie wordt overhandigd. Onkosten die terugbetaald worden zijn: ....<br />
+        Andere wijze van terugbetaling onkosten: ...<br />
+      </p>
+    </div>
+    <h1>Aansprakelijkheid</h1>
+    <div>
+      <p>
+        De organisatie is burgerlijk aansprakelijk voor de schade die de vrijwilliger aan derden en aan de organisatie berokkent bij het verrichten van vrijwilligerswerk, behalve in geval van bedrog, zware fout of eerder gewoonlijk dan toevallig
+        voorkomende lichte fout van de vrijwilliger.
+      </p>
+    </div>
+  </div>
+</section>
