--- a/repertoire.html
+++ b/repertoire.html
@@ -1,9 +1,10 @@
 ---
 layout: page
 title: Muziek
+permalink: /repertoire/
 ---
-<div class="wrapper style1 first">
-  <article id="portfolio" class="container">
+<section class="wrapper style1 first">
+  <div class="inner">
 		<header>
 			<h2>{{page.title}}</h2>
 		</header>
