--- a/_events/2020-03-21-alegria-concert.html
+++ b/_events/2020-03-21-alegria-concert.html
@@ -45,9 +45,9 @@ published: true
     <input name="entry.31126869" type="text" required/>
 
     <label>Datum</label>
-    <input type="radio" id="zaterdag" name="entry.289593656" value="zaterdag 21 maart 2020">
+    <input type="radio" id="zaterdag" name="entry.289593656" value="zaterdag 21 maart 2020" required>
     <label for="zaterdag">zaterdag 21 maart 2020</label>
-    <input type="radio" id="zondag" name="entry.289593656" value="zondag 22 maart 2020">
+    <input type="radio" id="zondag" name="entry.289593656" value="zondag 22 maart 2020" required>
     <label for="zondag">zondag 22 maart 2020</label>
 
     <label>Aantal volwassenen</label>
