--- a/_events/2020-03-21-alegria-concert.html
+++ b/_events/2020-03-21-alegria-concert.html
@@ -11,12 +11,10 @@ postalCode: 8790
 city: Waregem
 # country is optional and defaults to Belgium
 published: true
-description: "short description of event so form is not in seo"
+description: "Jaarlijks concertweekend van Gitaarensemble Alegria"
 ---
 <p>
-    Gitaarensemble Alegria presenteert zijn jaarlijks concertweekend
-    in het Oblatenauditorium
-    in de kustacademie Waregem.
+Gitaarensemble Alegria presenteert zijn jaarlijks concertweekend in het Oblatenauditorium in de kustacademie Waregem.
 </p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
