--- a/_events/2020-03-21-concertweekend.html
+++ b/_events/2020-03-21-concertweekend.html
@@ -11,7 +11,7 @@ street: Olmstraat 25
 postalCode: 8790
 city: Waregem
 # country is optional and defaults to Belgium
-published: true
+published: false
 description: "Gitaarensemble Alegria presenteert zijn jaarlijks concertweekend."
 ---
 <p>
