--- a/_events/2020-10-03-wijn-praline-verkoop.html
+++ b/_events/2020-10-03-wijn-praline-verkoop.html
@@ -71,5 +71,5 @@ Alvast bedankt voor jullie steun!
 
 <div id="confirmation" class="col-12">
     <h4>Je bestelling is goed ontvangen</h4>
-    <p>De kaarten zullen klaarliggen aan de ingang.<br/>Waregems Gitaarensemble Alegría vzw</p>
+    <p>Afhaalmoment is op zaterdag 3 oktober 2020 om 15u, parking academie Waregem.<br/>Waregems Gitaarensemble Alegría vzw</p>
 </div>
