added pickup person field.

--- a/_events/2020-10-03-wijn-praline-verkoop.html
+++ b/_events/2020-10-03-wijn-praline-verkoop.html
@@ -54,11 +54,17 @@ Alvast bedankt voor jullie steun!
     <label>Aantal flessen rode wijn (€8 per fles)</label>
     <input name="entry.1785954078" type="number" required min="0"/>
 
-    <label>Aantal flessen prosecco (€8 per fles)</label>
+    <label>Aantal flessen prosecco (€12 per fles)</label>
     <input name="entry.131888987" type="number" required min="0"/>
 
-    <label>Aantal dozen pralines (€12 per fles)</label>
+    <label>Aantal dozen pralines (€12 per doos)</label>
     <input name="entry.1831293348" type="number" required min="0"/>
+
+    <label>Indien iemand anders de bestelling komt ophalen, dan kan je de naam hier invullen</label>
+    <input name="entry.1843000926" type="text"/>
+
+
+
 
     <div class="col-12">
         <ul class="actions" style="padding-top: 10px">
@@ -71,5 +77,7 @@ Alvast bedankt voor jullie steun!
 
 <div id="confirmation" class="col-12">
     <h4>Je bestelling is goed ontvangen</h4>
+    <p>Te betalen voor 30/09/2020 via overschrijving met vermelding
+van naam & hoeveelheden (BE13 7380 2247 6639).</p>
     <p>Afhaalmoment is op zaterdag 3 oktober 2020 om 15u, parking academie Waregem.<br/>Waregems Gitaarensemble Alegría vzw</p>
 </div>
