removed wijnverkoop form.

--- a/_events/2020-10-03-wijn-praline-verkoop.html
+++ b/_events/2020-10-03-wijn-praline-verkoop.html
@@ -7,7 +7,7 @@ street: Olmstraat 25
 postalCode: 8790
 city: Waregem
 # country is optional and defaults to Belgium
-published: true
+published: false
 ---
 <p>
 Alegria is een vrolijk gitaarensemble waar muziek, eten en vriendschap voorp staan. We kijken uit naar een boeiend muzikaal jaar en hopen spoedig onze muziek voor te stellen aan het publiek.
@@ -23,10 +23,7 @@ Alvast bedankt voor jullie steun!
     $(document).ready(function () {
         $("#confirmation").hide();
     });
-
-
-    function updateThanksMessage() {
-
+ \÷
     }
 </script>
 <script type="text/javascript">var submitted = false;</script>
@@ -61,7 +58,7 @@ Alvast bedankt voor jullie steun!
     <input name="entry.1831293348" type="number" required min="0"/>
 
     <label>Indien iemand anders de bestelling komt ophalen, dan kan je de naam hier invullen</label>
-    <input name="entry.1843000926" type="text"/>
+    <input name="entry.1843000926" type="text"qyg(ey     cdqfr<a""""""RHDRYnjouup )/>
 
 
 
